// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User ID Badge Will not show display name if it matches the username 1`] = `
<routerlink to="/profile/slogz99">
  <div class="card">
    <div class="card-header">
      <p class="card-header-title">@slogz99</p>
    </div>
    <div class="card-content">
      <article class="media">
        <figure class="media-left image is-64x64"><img class="is-rounded" src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50"></figure>
        <div class="media-content">
          <!--v-if-->
          <p class="content is-size-7">Joined a year ago</p>
        </div>
      </article>
    </div>
  </div>
</routerlink>
`;

exports[`User ID Badge Will render correctly 1`] = `
<routerlink to="/profile/slogz99">
  <div class="card">
    <div class="card-header">
      <p class="card-header-title">@slogz99</p>
    </div>
    <div class="card-content">
      <article class="media">
        <figure class="media-left image is-64x64"><img class="is-rounded" src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50"></figure>
        <div class="media-content">
          <p class="content">Sandra Logan</p>
          <p class="content is-size-7">Joined a year ago</p>
        </div>
      </article>
    </div>
  </div>
</routerlink>
`;

exports[`User ID Badge Will show default avatar if none is provided 1`] = `
<routerlink to="/profile/slogz99">
  <div class="card">
    <div class="card-header">
      <p class="card-header-title">@slogz99</p>
    </div>
    <div class="card-content">
      <article class="media">
        <figure class="media-left image is-64x64"><img class="is-rounded" src="https://ui-avatars.com/api/?name=Sandra%20Logan"></figure>
        <div class="media-content">
          <p class="content">Sandra Logan</p>
          <p class="content is-size-7">Joined a year ago</p>
        </div>
      </article>
    </div>
  </div>
</routerlink>
`;
